# agent-book

./: .gitignore
chapter2/: 4_tool.ipynb  pyproject.toml
chapter3/: 2_whatsnew.ipynb  pyproject.toml
chapter4/: 1_langgraph_component.ipynb  2_graph_agent.ipynb  2_graph_agent.py  3_mcp_agent.ipynb  3_mcp_agent.py  4_streamlit_app.py  4_terminal_app.py  amazon-bedrock-model-providers.md  pyproject.toml  st_test.ipynb  x_agent_core.ipynb  x_agent_core.py
chapter4/report/: anthropic_developments_nov2025.html  anthropic_latest_trends.html  gpt_5_1_status.html  langgraph_report.html  meguro_november_climate.html  meguro_weather.html
chapter5/5-2-2/: package-lock.json
chapter5/5-2-2/src/mastra/: index.ts
chapter5/5-2-3/: package-lock.json  package.json
chapter5/5-2-3/src/mastra/tools/: confluenceTool.ts
chapter5/5-3-2/: ワークフロー確認コマンド.sh
chapter5/chapter5-handson/: package-lock.json  package.json
chapter5/chapter5-handson/.cursor/rules/: sample.mdc
chapter5/chapter5-handson/src/mastra/agents/: assistantAgent.ts
chapter5/chapter5-handson/src/mastra/tools/: confluenceTool.ts
chapter5/mastra_practice/: package-lock.json  package.json  tailwind_css_explanation.md
chapter5/mastra_practice/app/: page copy.tsx  page.tsx
chapter5/mastra_practice/app/components/: WorkflowForm.tsx  WorkflowInstructions.tsx
chapter5/mastra_practice/app/types/: workflow.ts
chapter5/mastra_practice/src/mastra/: index.ts
chapter6/backend/: pyproject.toml  requirements.txt
chapter6/backend/src/: api_master.py  main.py
(+3 files in other folders)
