[project]
name = "chapter3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser==6.0.11",
    "ipykernel>=7.1.0",
    "rich>=14.2.0",
    "strands-agents==1.6.0",
    "streamlit==1.49.1",
    "streamlit-jupyter>=0.3.1",
]
