[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore==0.1.2",
    "bedrock-agentcore-starter-toolkit==0.1.7",
    "python-dotenv>=1.2.1",
    "strands-agents==1.6.0",
    "strands-agents-tools==0.2.5",
    "uv==0.8.13",
]
